--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,25 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  font-family: "Open Sans", serif;
+  line-height: 1.5;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 24px;
+  background-color: #69306d;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
